--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -4,10 +4,16 @@
       "dependsOn": [],
       "output": {
         "authConfig": {
-          "additionalAuthenticationProviders": [],
+          "additionalAuthenticationProviders": [
+            {
+              "authenticationType": "AWS_IAM"
+            }
+          ],
           "defaultAuthentication": {
             "apiKeyConfig": {
-              "apiKeyExpirationDays": 7
+              "apiKeyExpirationDate": "2024-11-15T05:48:21.051Z",
+              "apiKeyExpirationDays": 365,
+              "description": "trial"
             },
             "authenticationType": "API_KEY"
           }
